feature_get-user-profile-and-list-of-favorite
