# src/routes/favorite.router.js
@@ -2,10 +2,19 @@ const favoriteRouter = require("express").Router();
 const {
   addFavorite,
   deleteFavorite,
+  getFavorite,
 } = require("../controller/favorite.controller");
+const { authenticate } = require("../middlewares/auth/authenticate");
+
 const { validateAddFavorite } = require("../middlewares/validation/favorite");
 
-favoriteRouter.post("/add", validateAddFavorite, addFavorite);
-favoriteRouter.delete("/:favoriteId", validateAddFavorite, deleteFavorite);
+favoriteRouter.get("/list", authenticate, getFavorite);
+favoriteRouter.post("/add", authenticate, validateAddFavorite, addFavorite);
+favoriteRouter.delete(
+  "/:serviceId",
+  authenticate,
+  validateAddFavorite,
+  deleteFavorite
+);
 
 module.exports = { favoriteRouter };
