# src/routes/user.router.js
@@ -3,12 +3,15 @@ const {
   register,
   login,
   deleteProfile,
+  userProfile,
 } = require("../controller/user.controller");
+const { authenticate } = require("../middlewares/auth/authenticate");
 const {
   validateSignup,
   validateLogin,
 } = require("../middlewares/validation/user");
 
+userRouter.get("/profile", authenticate, userProfile);
 userRouter.post("/register", validateSignup, register);
 userRouter.post("/login", validateLogin, login);
 userRouter.delete("/delete/profile", deleteProfile);
